--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-native-svg": "^12.1.1",
     "react-native-table-component": "^1.2.1",
     "react-native-vector-icons": "^8.1.0",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "react-world-map": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
