--- a/package.json
+++ b/package.json
@@ -27,14 +27,14 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-44.0.0.tar.gz",
     "react-native-chart-kit": "^6.11.0",
     "react-native-gesture-handler": "^2.1.0",
+    "react-native-maps": "^0.29.4",
     "react-native-reanimated": "^2.3.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-svg": "^12.1.1",
     "react-native-table-component": "^1.2.1",
     "react-native-vector-icons": "^8.1.0",
-    "react-native-web": "0.17.1",
-    "react-world-map": "^2.3.0"
+    "react-native-web": "0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
