--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-app-loading": "^1.3.0",
     "expo-blur": "~11.0.0",
     "expo-linear-gradient": "~11.0.0",
+    "expo-location": "^14.0.1",
     "expo-status-bar": "~1.2.0",
     "moment": "^2.29.1",
     "react": "17.0.1",
