--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-linear-gradient": "~11.0.0",
     "expo-location": "^14.0.1",
     "expo-status-bar": "~1.2.0",
+    "expo-web-browser": "^10.1.0",
     "moment": "^2.29.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
