--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@taoqf/react-native-mqtt": "^3.0.4",
     "expo": "~44.0.0",
     "expo-app-loading": "^1.3.0",
+    "expo-barcode-scanner": "^11.2.0",
     "expo-blur": "~11.0.0",
     "expo-linear-gradient": "~11.0.0",
     "expo-location": "^14.0.1",
+    "expo-sensors": "^11.1.0",
     "expo-status-bar": "~1.2.0",
     "expo-web-browser": "^10.1.0",
     "moment": "^2.29.1",
